# test-smudge-clean-filters

./: .gitattributes  README.md  clean_version.sh  expand_version.sh  filter_expandvars_clean.sh  filter_expandvars_smudge.sh  post-checkout  pyproject.toml
src/git_smudge_clean_filters/: __init__.py
