[project]
name = "git-smudge-clean-filters"
version = "0.0.1.post1+a2d696e"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rubén Laguna" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
git-smudge-clean-filters = "git_smudge_clean_filters:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
